# insta_reels_scrap

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  SUMMARY.md  TICKETS.md  app.py  config.yaml  pyproject.toml  reels.txt  setup.sh
docker/: Dockerfile.backend  Dockerfile.web  docker-compose.yml  nginx.conf
docs/: ARCHITECTURE.md  DEPLOY.md  SCALING.md  USAGE.md  WORKLOG.md
docs/superpowers/specs/: 2026-06-18-research-platform-design.md
prompts/: 00-architecture.md  01-ingest.md  02-extract.md  03-structure-render.md  04-search-knowledge.md  05-chat-rag.md  06-api-backend.md  07-frontend-shadcn.md  08-docker-scaling.md  REPLICATE.md
scripts/: fetch_saved_collection.py
src/reels_scrap/: __init__.py  cli.py  config.py  llm.py  models.py  observability.py  pipeline.py  ratelimit.py  search.py  structure.py
src/reels_scrap/api/: __init__.py  app.py  schemas.py
src/reels_scrap/chat/: __init__.py  prompts.py  rag.py
src/reels_scrap/extract/: __init__.py  frames.py  ocr.py  transcript.py  vision.py
src/reels_scrap/ingest/: __init__.py  collection.py  instaloader_src.py  ytdlp.py
src/reels_scrap/knowledge/: __init__.py  aggregate.py  synthesize.py
src/reels_scrap/render/: __init__.py  docs_site.py  pdf.py
templates/: pdf.css  reel.md.j2
tests/: conftest.py  test_api.py  test_knowledge.py  test_rag.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/__tests__/: chat.test.tsx
web/src/lib/: api.ts  utils.ts
web/src/views/: KnowledgePage.tsx  (+2 more)
(+4 files in other folders)
